# axum-graphql

./: .dockerignore  .env.EXAMPLE  .gitignore  .gitleaksignore  .ignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  _typos.toml  deno.json  deny.toml  docker-compose.yml  dprint.json  justfile  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  rust-toolchain.toml  sqlite.db
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit-on-push.yml  dependency-review.yml  general.yml  links.yml  pre-commit.yml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
.sqlx/: query-018f98e4f11c1ff1701c1e33ec0f6cd1fa9f1773cf7a46a8fb89742cb96e71ff.json  query-01b630de16864b2af097e1c959a681f5709dfec62ea14a3e786f864b2fc42eb1.json  query-5842bf3f4402eb75bdb1669ef956a4ebb08c74a8641564762fcb6af8e3d8ac22.json  query-9f14ca0ffd823d375f894422a683305bdf9e255264ba352b9ff5892eea993dcb.json  query-aeecdc95d3bab0b3d13adcf0b32ce1c2014eab62477a514d007082d3a0c1cfa4.json  query-f594221cbaee5ba08408a3859d3f7255c25f6aaf15a9c8d605ee38987bf7898d.json
grafana/datasources/: default.yml
grafana/plugins/: app.yml
migrations/: 20241018164225_create_post_table.sql
public/fonts/: fonts.css  fonts_original.css
public/static/css/: index.css
scripts/: chartdb.sql  init_db.sh  minify-css.ts
src/: database.rs  lib.rs  main.rs  router.rs  startup.rs
src/model/: mod.rs  post.rs  tests.rs
src/model/snapshot_inputs/: create_draft.json  hello.json
src/model/snapshots/: axum_graphql__model__tests__snapshot_graqphql_query_async@create_draft.json.snap  axum_graphql__model__tests__snapshot_graqphql_query_async@hello.json.snap  axum_graphql__model__tests__snapshot_hello_query.snap
src/observability/: common.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
src/observability/snapshots/: axum_graphql__observability__metrics__tests__metrics_endpoint_returns_collected_metrics-3.snap
src/routes/: mod.rs
src/snapshots/: axum_graphql__database__tests__run_migrations_creates_tables.snap
tests/api/: helpers.rs  main.rs  startup.rs
tests/api/model/: mod.rs  post.rs  tests.rs
tests/api/model/snapshots/: api__model__tests__snapshot_graqphql_query_async@create_draft.json.snap  api__model__tests__snapshot_graqphql_query_async@hello.json.snap
tests/api/observability/: metrics.rs
tests/api/observability/snapshots/: api__observability__metrics__metrics_endpoint_returns_collected_metrics-4.snap
tests/api/routes/: mod.rs
