[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/axum-graphql"
# rust edition 2024 msrv is 1.85.0
rust-version = "1.85.0"
description = "Rust GraphQL demo/test API written in Rust, using Axum for routing, async-graphql and SQLx."

[lints.clippy]
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# Faster snapshot runs
# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# Faster cargo check and cargo build
# See: https://github.com/launchbadge/sqlx#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "axum-graphql"

[dependencies]
anyhow = "1.0.98"
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
opentelemetry = "0.29.1"
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ['timeout', 'util'] }
tower-http = { version = "0.6.4", features = ["compression-br", "compression-gzip", "fs", "timeout"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = "1.2.1"

[dev-dependencies]
assert_fs = "1.1.3"
enigo = "0.3.0"
float-cmp = "0.10.0"
futures = "0.3.31"
http-body-util = "0.1.3"
insta = { version = "1.43.1", features = ["glob", "json", "redactions"] }
mime = "0.3.17"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ['util'] }
url = "2.5.4"
wiremock = "0.6.3"
